# vmk_spectrum3_wrapper

./: .coveragerc  .env  .gitignore  README.md  app.py  driver.xml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
demo/: demo (extended read+integration filter).ipynb  demo (init).ipynb  demo (no filters).ipynb  demo (standard read).ipynb  demo (standard read+integration filter).ipynb  driver.xml
docs/: pyspectrum3.md
pyspectrum3/: __init__.py
src/vmk_spectrum3_wrapper/: __init__.py  adc.py  config.py  exception.py  loggers.py
tests/: setup.py  test_user_cases.py  utils.py
tests/calibrations/: test_bias_calibration.py
tests/data/: test_meta.py  test_serialization.py
tests/device/: test_device.py  test_device_connection.py  test_device_read.py  test_device_setup.py
tests/driver/: test_high_load_handler.py
tests/fakes/: device.py
tests/os/: test_sleep_timeout.py
tests/use_cases/: _test_calibration.py  _test_storage.py  test_calibration.py  test_storage.py
vmk_spectrum3_wrapper/: __init__.py  adc.py  calibration.py  config.py  data.py  detector.py  exception.py  loggers.py  noise.py  shuffle.py  storage.py  types.py  typing.py  units.py
vmk_spectrum3_wrapper/data/: __init__.py  base_data.py  data.py  datum.py  exceptions.py  meta.py  utils.py
vmk_spectrum3_wrapper/device/: __init__.py  config.py  device.py  device_config.py  exceptions.py
vmk_spectrum3_wrapper/filter/: __init__.py  base_filter.py  buffer_filter.py  core_filter.py  filter.py  flow_filter.py  frame_filter.py  integration_filter.py  pipe_filter.py  (+7 more)
(+77 files in other folders)
